--- a/my_model/package.json
+++ b/my_model/package.json
@@ -1,5 +1,5 @@
 {
     "scripts": {
-        "start": "python3 yolo_detect.py --model my_model.pt --source https://192.168.0.184:8080/video --thresh 0.9 --resolution 600x800"
+        "start": "python3 yolo_detect.py --model cyclon1.0.pt --source https://192.168.0.183:8080/video --thresh 0.1 --resolution 304x544"
     }
 }
